update testing notebook and create my own notebook

--- a/notebook/testing.ipynb
+++ b/notebook/testing.ipynb
@@ -29,12 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "0238e35c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = r\"C:\\I4\\AI I4\\Course\\Assignment1\\bodyfat\\data\\bodyfat.csv\"     # <-- change if needed\n",
+    "DATA_PATH = r\"../data/\"     # <-- change if needed\n",
     "MODEL_DIR = \"models\"\n",
     "MODEL_PATH = os.path.join(MODEL_DIR, \"bodyfat_model.pkl\")\n",
     "FEATURES_PATH = os.path.join(MODEL_DIR, \"bodyfat_features.pkl\")\n",
