--- a/notebook/training_model.ipynb
+++ b/notebook/training_model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "9149f519",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "5e66b5cb",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "4  42.2   24.0    32.2     27.7   17.7  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,6 +188,42 @@
     "\n",
     "df = pd.read_csv(r\"../data/bodyfat.csv\")\n",
     "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "608d5a8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Density      1.0396\n",
+       "BodyFat     26.1000\n",
+       "Age         62.0000\n",
+       "Weight     216.0000\n",
+       "Height      73.2500\n",
+       "Neck        41.4000\n",
+       "Chest      112.3000\n",
+       "Abdomen    104.8000\n",
+       "Hip        103.1000\n",
+       "Thigh       61.6000\n",
+       "Knee        40.9000\n",
+       "Ankle       23.1000\n",
+       "Biceps      36.2000\n",
+       "Forearm     31.8000\n",
+       "Wrist       20.2000\n",
+       "Name: 60, dtype: float64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[60]"
    ]
   },
   {
